trying to add a completed flag to the todos. Need to solve an associated layout problem first. fun

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,6 +14,10 @@
     color: var(--todo-fg-clr);
 }
 
+* {
+    box-sizing: border-box;
+}
+
 [data-todo-app] {
     border: var(--todo-bord-b1);
     border-radius: 2px;
@@ -56,7 +60,7 @@
             border: var(--todo-bord-b1);
             border-radius: 2px;
             background-color: white;
-            > h2 {
+            > h2, div {
                 display: inline;
                 padding-inline-start: calc(var(--todo-pad) * 2);
             }
@@ -64,15 +68,77 @@
                 content: '\2195\FE0F';
                 font-size: var(--todo-text-sz-lg);
                 background-color: white;
-                padding-inline-start: calc(var(--todo-pad));
+                padding-inline-start: calc(var(--todo-pad) / 2);
                 padding-inline-end: calc(var(--todo-pad) / 2);
             }
         }
+
         &[open] {
-            summary:after {
-                content: '\2194\FE0F';
+            summary {
+                &:after {
+                    content: '\2194\FE0F';
+                }
             }
-            margin-block-end: 0;
+            ol {
+                min-height: 1rem;
+            }
+        }
+
+        ol {
+            display: grid;
+            grid-template-columns: 2fr 2fr 1fr;
+            font-size: var(--todo-text-sz);
+            margin-inline-start: var(--todo-pad);
+            padding-inline: var(--todo-pad);
+            list-style-type: none;
+            li {
+                > * {
+                    grid-column: 1 / 3;
+                }
+                &:first-child {
+                    border-top: var(--todo-bord-b1);
+                    border-radius: 2px 2px 0 0;
+                    padding-block-start: 0.5rem;
+                }
+                &:last-child {
+                    border-radius: 0 0 2px 2px;
+                }
+                border-bottom: var(--todo-bord-b1);
+                border-inline: var(--todo-bord-b1);
+                &:where(:not(:has(> form))) {
+                    div {
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        align-items: center;
+                        p {
+                            padding-inline: var(--todo-pad);
+                        }
+                        div {
+                            display: flex;
+                            gap: var(--todo-gap);
+                        }
+                    }
+                }
+
+                &:where(:has(> form)) {
+                    form {
+                        padding-block: var(--todo-pad);
+                        padding-inline-start: var(--todo-pad);
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        align-items: center;
+                        div {
+                            display: flex;
+                            gap: 0.5rem;
+                            button {
+                                height: fit-content;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 
@@ -82,58 +148,6 @@
         padding-block-end: calc(var(--todo-pad) / 2);
     }
 
-    ol {
-        font-size: var(--todo-text-sz);
-        margin-inline-start: var(--todo-pad);
-        padding-inline: var(--todo-pad);
-        list-style-type: none;
-        li {
-            &:first-child {
-                border-top: var(--todo-bord-b1);
-                border-radius: 2px 2px 0 0;
-                padding-block-start: 0.5rem;
-            }
-            &:last-child {
-                border-radius: 0 0 2px 2px;
-            }
-            border-bottom: var(--todo-bord-b1);
-            border-inline: var(--todo-bord-b1);
-            &:where(:not(:has(> form))) {
-                div {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    align-items: center;
-                    p {
-                        padding-inline: var(--todo-pad);
-                    }
-                    div {
-                        display: flex;
-                        gap: var(--todo-gap);
-                    }
-                }
-            }
-
-            &:where(:has(> form)) {
-                form {
-                    padding-block: var(--todo-pad);
-                    padding-inline: var(--todo-pad);
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    align-items: center;
-                    /* border-bottom: 1px solid #000; */
-                    div {
-                        display: flex;
-                        gap: 0.5rem;
-                        button {
-                            height: fit-content;
-                        }
-                    }
-                }
-            }
-        }
-    }
     > form {
         --todo-lbl-offset-top: 0.55rem;
         --todo-lbl-offset-left: -1.5rem;
